<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingRight="@dimen/padding"
    android:paddingLeft="@dimen/padding"
    android:paddingBottom="@dimen/padding">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/textView"
        android:id="@+id/item"
        android:hint="@string/itemName"
        android:layout_marginTop="@dimen/padding"
        android:maxLength="50"/>


    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/textView"
        android:id="@+id/quantity"
        android:hint="@string/quantity"
        android:layout_below="@+id/item"
        android:layout_marginTop="@dimen/padding"
        android:maxLength="25">
    </EditText>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

    <Button
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:text="@string/save"
        android:id="@+id/save"
        android:onClick="addItem"
        android:background="@color/colorPrimary"
        android:textColor="#FFFFFF"
        android:layout_marginTop="16dp"/>

    <Button
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:text="@string/cancel"
        android:id="@+id/cancel"
        android:background="@color/colorPrimary"
        android:textColor="#FFFFFF"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="@dimen/padding"/>

    </LinearLayout>

</LinearLayout>